# BioRazer-PyMOL

./: README.md  pyproject.toml
biorazer_pymol/: __init__.py
biorazer_pymol/cmd/: __init__.py  analyzers_advanced.py  calculator.py  fitter.py  information_extractor.py  selectors.py  transformers.py  visualizers.py  visualizers_advanced.py
biorazer_pymol/edit/: number.py
biorazer_pymol/mark/: arrow.py  center_of_mass.py  point.py
biorazer_pymol/pallete/: __init__.py  property.py
biorazer_pymol/print/: __init__.py  coord.py  id.py  seq.py
biorazer_pymol/select/: __init__.py  property.py  sequence.py  sidechain.py
biorazer_pymol/utils/: aa_constants.py  coord_fitter.py  macro.py  name_utils.py
biorazer_pymol/widget/: __init__.py  axes.py
docs/: draw_components.md
extensions/: colorers.py
extensions/cmd/: __init__.py  calculator.py  fitter.py  transformers.py  visualizers.py
extensions/scripts/: axes.py  colour_by_residue_property.py
extensions/utils/: macro.py
pymol_extensions/: __init__.py
pymol_extensions/cmd/: information_extractor.py  selectors.py
pymol_extensions/pallete/: property.py
pymol_extensions/point/: __init__.py
pymol_extensions/select/: __init__.py  property.py
pymol_extensions/utils/: aa_constants.py  coord_fitter.py  name_utils.py
