[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "biorazer-pymol"
description = "Some useful pymol plugins"
authors = [
    "Maxim Wang <wangfanlin2022@sibcb.ac.cn>"
]
version = "0.2.0"
readme = "README.md"
packages = [
  { include = "biorazer_pymol" }
]

[tool.poetry.dependencies]
python = "^3.10"